Add write modes + change filename to filepath